# phonenumber-places-email-api

./: Dockerfile  Dockerfile.dev  Notes.md  README.md  docker-compose.dev.yml  docker-compose.yml  main.py
app/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.unit  manage.py  pyproject.toml  pytest.ini
app/commands/: db.py  runserver.py
app/db/: async_db.py  indexes.py
app/models/: __init__.py
app/routers/: email.py  places.py
app/tests/routers/: test_phonenumber.py  test_places_lookup.py  test_redis_db.py
commands/: __init__.py  base.py  runserver.py
db/: async_db.py  indexes.py
models/: models.py
routers/: phonenumber.py  redis_db.py
tests/db/: test_db.py
tests/routers/: test_email.py
traefik/: tls-options.yml  traefik.yml
